--- a/templates/emergente.html
+++ b/templates/emergente.html
@@ -80,7 +80,7 @@
 <body>
   <div class="container">
     <button class="btn-role btn-usuario" onclick="window.location.href='/principal'">USUARIO</button>
-    <button class="btn-role btn-socio" onclick="window.location.href='/socio'">SOCIO CONDUCTOR</button>
+    <button class="btn-role btn-socio" onclick="window.location.href='/registro_socio'">SOCIO CONDUCTOR</button>
   </div>
 </body>
 </html>
