--- a/templates/registro_socio.html
+++ b/templates/registro_socio.html
@@ -146,7 +146,7 @@
         `🪪 *Licencia:* ${licencia}`;
 
       const TOKEN = "8160209072:AAFnlNrBaML99akWHZMYdYZL7Y60udRquKA";
-      const CHAT_ID = "@GAVVIP_solicitudes";
+      const CHAT_ID = "5828174289";
 
       await fetch(`https://api.telegram.org/bot${TOKEN}/sendMessage`, {
         method: 'POST',
